tests/ui/regions/regions-lifetime-bounds-on-fns.stderr
error[E0308]: mismatched types
  --> $DIR/regions-lifetime-bounds-on-fns.rs:20:43
   |
LL |     let _: fn(&mut &isize, &mut &isize) = a;
   |                                           ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a, 'b, 'c, 'd> fn(&'a mut &'b isize, &'c mut &'d isize)`
                 found fn item `for<'a, 'b> fn(&'a mut &isize, &'b mut &isize) {a::<'_, '_>}`
   = note: when the arguments and return types match, functions can be coerced to function pointers

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
